Testing env params for all things

--- a/proftpd.conf
+++ b/proftpd.conf
@@ -1,6 +1,7 @@
-ServerName "proftpd"
+ServerName " %{env:PROFTPD_SERVERNAME}"
 DefaultRoot /ftp
-User root
+User %{env:PROFTPD_RUNASUSER}
+PassivePorts %{env:PROFTPD_PASSIVE_MIN} %{env:PROFTPD_PASSIVE_MAX}
 
 <Anonymous ~ftp>
 RequireValidShell off
