Add default address

--- a/proftpd.conf
+++ b/proftpd.conf
@@ -2,6 +2,7 @@ ServerName " %{env:PROFTPD_SERVERNAME}"
 DefaultRoot /ftp
 User %{env:PROFTPD_RUNASUSER}
 PassivePorts %{env:PROFTPD_PASSIVE_MIN} %{env:PROFTPD_PASSIVE_MAX}
+DefaultAddress %{env:PROFTPD_DEFAULT_ADDR}
 
 <Anonymous ~ftp>
 RequireValidShell off
