Don't make  a mess

--- a/proftpd.conf
+++ b/proftpd.conf
@@ -3,7 +3,7 @@ DefaultRoot /ftp
 User %{env:PROFTPD_RUNASUSER}
 PassivePorts %{env:PROFTPD_PASSIVE_MIN} %{env:PROFTPD_PASSIVE_MAX}
 DefaultAddress %{env:PROFTPD_DEFAULT_ADDR}
-AuthUserFile /etc/ftpd/passwd
+AuthUserFile /etc/proftpd/passwd
 
 <Anonymous ~ftp>
 RequireValidShell off
