--- a/proftpd.conf
+++ b/proftpd.conf
@@ -8,6 +8,7 @@ AuthUserFile /etc/proftpd/passwd
 <Anonymous ~ftp>
 RequireValidShell off
 MaxClients 10
+RootLogin on
 <Directory *>
 <Limit WRITE>
 DenyAll
