Default uid/gid, tweaks

--- a/proftpd.conf
+++ b/proftpd.conf
@@ -4,11 +4,11 @@ User %{env:PROFTPD_RUNASUSER}
 PassivePorts %{env:PROFTPD_PASSIVE_MIN} %{env:PROFTPD_PASSIVE_MAX}
 DefaultAddress %{env:PROFTPD_DEFAULT_ADDR}
 AuthUserFile /etc/proftpd/passwd
+RequireValidShell off
 
 <Anonymous ~ftp>
 RequireValidShell off
 MaxClients 10
-RootLogin on
 <Directory *>
 <Limit WRITE>
 DenyAll
