--- a/proftpd.conf
+++ b/proftpd.conf
@@ -5,13 +5,15 @@ PassivePorts %{env:PROFTPD_PASSIVE_MIN} %{env:PROFTPD_PASSIVE_MAX}
 DefaultAddress %{env:PROFTPD_DEFAULT_ADDR}
 AuthUserFile /etc/proftpd/passwd
 RequireValidShell off
+RootLogin %{env:PROFTPD_ALLOWROOT}
 
 <Anonymous ~ftp>
-RequireValidShell off
-MaxClients 10
-<Directory *>
-<Limit WRITE>
-DenyAll
-</Limit>
-</Directory>
+    RootLogin %{env:PROFTPD_ALLOWROOT}
+    RequireValidShell off
+    MaxClients 10
+    <Directory *>
+        <Limit WRITE>
+        DenyAll
+        </Limit>
+    </Directory>
 </Anonymous>
