--- a/proftpd.conf
+++ b/proftpd.conf
@@ -7,6 +7,10 @@ AuthUserFile /etc/proftpd/passwd
 RequireValidShell off
 RootLogin %{env:PROFTPD_ALLOWROOT}
 
+<Directory /ftp>
+    AllowOverwrite %{env:PROFTPD_ALLOWOVERWRITE}
+</Directory>
+
 <Anonymous ~ftp>
     RootLogin %{env:PROFTPD_ALLOWROOT}
     RequireValidShell off
