Allow args and debug level via env

--- a/proftpd.conf
+++ b/proftpd.conf
@@ -6,6 +6,7 @@ DefaultAddress %{env:PROFTPD_DEFAULT_ADDR}
 AuthUserFile /etc/proftpd/passwd
 RequireValidShell off
 RootLogin %{env:PROFTPD_ALLOWROOT}
+DebugLevel %{env:PROFTPD_DEBUGLEVEL}
 
 <Directory /ftp>
     AllowOverwrite %{env:PROFTPD_ALLOWOVERWRITE}
