--- a/proftpd.conf
+++ b/proftpd.conf
@@ -7,6 +7,7 @@ AuthUserFile /etc/proftpd/passwd
 RequireValidShell off
 RootLogin %{env:PROFTPD_ALLOWROOT}
 DebugLevel %{env:PROFTPD_DEBUGLEVEL}
+MasqueradeAddress %{env:PROFTPD_MASQUERADEADDRESS}
 
 <Directory /ftp>
     AllowOverwrite %{env:PROFTPD_ALLOWOVERWRITE}
